logs/Slang/generated/keywords/5.6.2--keyword_assign.sv.log
name: keyword_assign
description: The 'assign' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assign.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assign.sv:8:8: error: expected declarator
    bit assign;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_assign.sv:8:15: error: expected variable assignment
    bit assign;
              ^
